--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,9 @@
         android:id="@+id/textView6"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:text="TextView"
+        android:text="0"
+        android:autoSizeTextType="uniform"
+        android:gravity="center"
         app:layout_constraintBottom_toTopOf="@+id/editTextNumber"
         app:layout_constraintEnd_toStartOf="@+id/textView2"
         app:layout_constraintHorizontal_bias="0.378"
@@ -22,7 +24,9 @@
         android:id="@+id/textView"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:text="TextView"
+        android:text="0"
+        android:autoSizeTextType="uniform"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/textView3"
         app:layout_constraintHorizontal_bias="0.385"
@@ -34,7 +38,9 @@
         android:id="@+id/textView2"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:text="TextView"
+        android:text="0"
+        android:autoSizeTextType="uniform"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
@@ -47,7 +53,9 @@
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:layout_marginEnd="56dp"
-        android:text="TextView"
+        android:text="0"
+        android:autoSizeTextType="uniform"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/textView4"
         app:layout_constraintHorizontal_bias="0.989"
@@ -59,7 +67,9 @@
         android:id="@+id/textView4"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:text="TextView"
+        android:text="0"
+        android:autoSizeTextType="uniform"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.85"
@@ -71,7 +81,9 @@
         android:id="@+id/textView5"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:text="TextView"
+        android:text="0"
+        android:autoSizeTextType="uniform"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.85"
@@ -85,6 +97,9 @@
         android:layout_height="64dp"
         android:ems="10"
         android:inputType="number"
+        android:hint="result"
+        android:gravity="center"
+        android:autoSizeTextType="uniform"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/editTextNumber2"
         app:layout_constraintHorizontal_bias="0.378"
@@ -98,6 +113,9 @@
         android:layout_height="64dp"
         android:ems="10"
         android:inputType="number"
+        android:hint="result"
+        android:gravity="center"
+        android:autoSizeTextType="uniform"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/editTextNumber3"
         app:layout_constraintHorizontal_bias="0.757"
@@ -112,6 +130,9 @@
         android:layout_marginTop="28dp"
         android:ems="10"
         android:inputType="number"
+        android:hint="result"
+        android:gravity="center"
+        android:autoSizeTextType="uniform"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.85"
